fixes chat text overflow problem

--- a/examples/chat_room/css/style.css
+++ b/examples/chat_room/css/style.css
@@ -15,6 +15,7 @@ h1{
 	border: 1px solid black;
 	height: 400px;
 	margin: 0 auto;
+	overflow: auto;
 	width: 90%;
 }
 	.chat-message-container{
@@ -25,6 +26,7 @@ h1{
 			color: #444;
 			float: left;
 			font-weight: bold;
+			overflow: hidden;
 			text-align: right;
 			width: 75px;
 		}
